--- a/style.css
+++ b/style.css
@@ -1,5 +1,68 @@
+ .photo-area {
+	box-sizing: border-box;
+	float: left;
+	padding-left: 10px;
+	padding-right: 10px;
+	border: 2px solid red;
+	width: 20%;
+}
+
+
+.personal-data {
+    clear: right;
+    }
+
+.personal-data {
+    box-sizing: border-box;
+	float: left;
+	padding-right: 10px;
+	border: 2px solid red;
+	width: 80%; 
+}
+
+
+
+header {
+	clear: left;
+}
+
 body {
+	clear: both;
 	width: 1024px;
 	margin: 0 auto;
 	border: 2px solid red;
+}
+.nav {
+	clear: left;
+
+}
+.nav {
+	box-sizing: border-box;
+	float: left;
+	width: 20%;
+	padding-left: 10px;
+	padding-right: 10px;
+	border: 2px solid red;
+}
+.cv {
+	box-sizing: border-box;
+	float: left;
+	width: 80%;
+	padding-right: 10px;
+	border: 2px solid red;
+}
+
+
+footer {
+	clear: both;
+	padding: 20px;
+	background-color: #bad0e2;
+	border-radius: 5px;
+}
+footer .copywrite {
+
+	
+	color: #7f8082;
+	float: right;
+	
 }
