feat: add text filling

--- a/style.css
+++ b/style.css
@@ -3,10 +3,9 @@
 	float: left;
 	padding-left: 10px;
 	padding-right: 10px;
-	border: 2px solid red;
 	width: 20%;
+	box-shadow: 0 30px 30px #3a3b3d;
 }
-
 
 .personal-data {
     clear: right;
@@ -16,11 +15,13 @@
     box-sizing: border-box;
 	float: left;
 	padding-right: 10px;
-	border: 2px solid red;
 	width: 80%; 
 }
 
-
+h2 { 
+	text-transform: uppercase;
+	padding-left: 10px;
+}
 
 header {
 	clear: left;
@@ -30,39 +31,77 @@ body {
 	clear: both;
 	width: 1024px;
 	margin: 0 auto;
-	border: 2px solid red;
 }
 .nav {
 	clear: left;
-
 }
+
 .nav {
 	box-sizing: border-box;
 	float: left;
 	width: 20%;
 	padding-left: 10px;
 	padding-right: 10px;
-	border: 2px solid red;
 }
+
+.menu {
+	position: fixed;
+	margin-top: 10px;
+	margin-right: 20px;
+	padding-bottom: 20px;
+	font-family: 'Montserrat', 'Arial', sans-serif;
+	background-color: #20548e;
+	box-shadow: 0 30px 30px #3a3b3d;
+}
+
+.menu a {
+	color: white;
+	text-decoration: none;
+}
+
+.menu li {
+	text-align: right;
+	padding: 20px 30px 20px 20px;
+	list-style-type: none;
+}
+
 .cv {
 	box-sizing: border-box;
 	float: left;
-	width: 80%;
 	padding-right: 10px;
-	border: 2px solid red;
+	margin-left: 21%;
+	width: 80%;
 }
 
+p {
+	padding-left: 10px;
+	padding-right: 10px;
+	text-indent: 1.5em; 
+	text-align: justify;
+	font-family: 'Montserrat', 'Arial', sans-serif;
+}
+
+h3 {
+	text-align: center;
+	line-height: 1.2;
+	letter-spacing: -0.025em;
+	text-transform: uppercase;
+	color: #424242;
+	}
+	
+.code {
+	padding-left: 100px;
+	padding-right: 50px;
+	text-indent: 0; 
+}
 
 footer {
 	clear: both;
 	padding: 20px;
-	background-color: #bad0e2;
-	border-radius: 5px;
+	background-color: #20548e;
 }
-footer .copywrite {
 
-	
-	color: #7f8082;
+footer .copywrite {
+	color: #b7bac0;
 	float: right;
-	
-}
+	}
